# linux_project_2

./: .gitignore  CMakeLists.txt  CMakeListsTemp.txt  README.md  RunMe  RunMe.cpp  RunMe.h  build_program.sh  build_project.sh  clean  notes.txt  utility.cpp  utility.h
DB/: flightScanner.sh
DB/EGGW/: EGGW.apt  EGGW.dpt
DB/EGKK/: EGKK.apt  EGKK.dpt
DB/EGLL/: EGLL.apt  EGLL.dpt
DB/LLBG/: LLBG.apt  LLBG.dpt
EGGW/: EGGW.apt  EGGW.dpt
EGKK/: EGKK.apt  EGKK.dpt
EGLL/: EGLL.apt  EGLL.dpt
LLBG/: LLBG.apt  LLBG.dpt
missions/: functions.cpp  mission1.cpp  mission2.cpp  mission3.cpp  mission4.cpp  mission5.cpp  mission6.cpp  mission7.cpp  missions.h
utilities/: CMakeLists.txt  utility.cpp  utility.h
